--- a/index.html
+++ b/index.html
@@ -12,74 +12,26 @@
 </head>
 
 <body>
-    <nav class="bg-orange-50 shadow-lg fixed w-full z-20 top-0 start-0 border-b border-gray-200">
+    <nav class="bg-pink-50 shadow-lg fixed w-full z-20 top-0 start-0 border-b border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo">
-                <span class="self-center text-2xl font-bold whitespace-nowrap text-rose-500">The Three Little
+            <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <img src="assets/3pigs.svg" class="h-8" alt="Flowbite Logo">
+                <span class="self-center text-2xl font-bold piggy-font whitespace-nowrap text-pink-500">The Three
+                    Little
                     Pigs</span>
             </a>
-            <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-                <button data-collapse-toggle="navbar-sticky" type="button"
-                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
-                    aria-controls="navbar-sticky" aria-expanded="false">
-                    <span class="sr-only">Open main menu</span>
-                    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-                        viewBox="0 0 17 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M1 1h15M1 7h15M1 13h15" />
-                    </svg>
-                </button>
-            </div>
-            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-                <ul
-                    class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
-                    <li>
-                        <a href="index.html"
-                            class="block py-2 px-3 text-white bg-rose-500 rounded md:bg-orange-50 md:text-rose-500 md:p-0 "
-                            aria-current="page">Home</a>
-                    </li>
-                    <li>
-                        <a href="introduction.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Introduction</a>
-                    </li>
-                    <li>
-                        <a href="pig1.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Pig
-                            1
-                        </a>
-                    </li>
-                    <li>
-                        <a href="pig2.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Pig
-                            2
-                        </a>
-                    </li>
-                    <li>
-                        <a href="pig3.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:hover:text-rose-500 md:p-0">Pig
-                            3
-                        </a>
-                    </li>
-                    <li>
-                        <a href="conclusion.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:hover:text-rose-500 md:p-0">Conclusion
-                        </a>
-                    </li>
-                </ul>
-            </div>
         </div>
     </nav>
-    <div class="h-screen py-20 flex justify-center bg-orange-50">
+    <div class="h-screen py-20 flex justify-center bg-pink-50">
         <div
             class="md:mx-4 sm:mx-2 grid md:grid-cols-2 sm:grid-cols-1 lg:max-w-4xl md:max-w-2xl sm:max-w-full flex items-center md:px-6 sm:px-4 gap-4">
-            <div class="flex-1 text-center md:text-left">
-                <h1 class="text-3xl serif">The Three Little Pigs Story</h1>
+            <div class="flex-1 text-center md:text-left" data-barba="container">
+                <h1 class="text-3xl piggy-font">The Three Little Pigs Story</h1>
                 <p class="text-xl mt-6 mb-12">Three little pigs build houses from straw, sticks, and bricks. Which house
                     can
                     keep them safe from the big bad wolf?</p>
                 <a href="introduction.html"
-                    class="bg-rose-600 hover:bg-rose-500 text-white px-6 py-3 rounded-3xl text-md serif">Read
+                    class="bg-pink-400 hover:bg-pink-500 text-white px-6 py-3 rounded-3xl text-md piggy-font">Read
                     Now</a>
             </div>
             <div data-aos="flip-right" data-tilt data-tilt-max="5" data-tilt-scale="1.025"
@@ -89,6 +41,30 @@
             </div>
         </div>
     </div>
+    <footer class="bg-pink-100 py-4">
+        <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+            <span class="text-sm text-gray-500 sm:text-center">© BSCS 2-A <a href="https://flowbite.com/"
+                    class="hover:underline">CCS06</a>. Applications Development and Emerging Technologies.
+            </span>
+            <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 sm:mt-0">
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Cruz, Jansen</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Alfonso, Aljunalei</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Arcega, Lance</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline">David, Ivan</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline">David, Ivan</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="text/javascript" src="vanilla-tilt.js"></script>
