--- a/pig1.html
+++ b/pig1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Three Little Pigs</title>
+    <title>The Three Little Pigs - Page 2 - The Straw</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
@@ -12,61 +12,13 @@
 </head>
 
 <body>
-    <nav class="bg-orange-50 shadow-lg fixed w-full z-20 top-0 start-0 border-b border-gray-200">
+    <nav class="bg-pink-50 shadow-lg fixed w-full z-20 top-0 start-0 border-b border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
-                <span class="self-center text-2xl font-bold whitespace-nowrap text-rose-500">The Three Little
+            <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <img src="assets/3pigs.svg" class="h-8" alt="Flowbite Logo" />
+                <span class="self-center text-2xl font-bold whitespace-nowrap text-pink-500 piggy-font">The Three Little
                     Pigs</span>
             </a>
-            <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-                <button data-collapse-toggle="navbar-sticky" type="button"
-                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
-                    aria-controls="navbar-sticky" aria-expanded="false">
-                    <span class="sr-only">Open main menu</span>
-                    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-                        viewBox="0 0 17 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M1 1h15M1 7h15M1 13h15" />
-                    </svg>
-                </button>
-            </div>
-            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-                <ul
-                    class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
-                    <li>
-                        <a href="index.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Home</a>
-                    </li>
-                    <li>
-                        <a href="introduction.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Introduction</a>
-                    </li>
-                    <li>
-                        <a href="pig1.html"
-                            class="block py-2 px-3 text-white bg-rose-500 rounded md:bg-orange-50 md:text-rose-500 md:p-0"
-                            aria-current="page">Pig 1
-                        </a>
-                    </li>
-                    <li>
-                        <a href="pig2.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Pig
-                            2
-                        </a>
-                    </li>
-                    <li>
-                        <a href="pig3.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:hover:text-rose-500 md:p-0">Pig
-                            3
-                        </a>
-                    </li>
-                    <li>
-                        <a href="conclusion.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:hover:text-rose-500 md:p-0">Conclusion
-                        </a>
-                    </li>
-                </ul>
-            </div>
         </div>
     </nav>
 
@@ -74,14 +26,15 @@
         <div class="lg:w-1/2 md:4/5 p-8">
             <h1 class="text-3xl text-center" style="font-family: PWFicelles;">The Straw</h1>
             <p class="leading-8 text-lg">
-                The first piglet was very lazy and did not like to work at all, so he decided to create his house out of
+                The first little pig was very lazy and did not like to work at all, so he decided to create his house
+                out of
                 <span style="font-family:PWFicelles"> straw</span>
             </p>
             <img src="assets/straw-house.jpg" class="py-8" data-aos="flip-right">
             <br>
             <br>
             <p class="leading-8 text-lg">
-                The piglet quickly built his house, then celebrated. He played, sang, and danced for the rest of the
+                The little pig quickly built his house, then celebrated. He played, sang, and danced for the rest of the
                 day.
             </p>
             <img src="assets/straw-house-done.webp" class="py-8" data-aos="flip-right">
@@ -96,27 +49,75 @@
             <br>
             <br>
             <p class="leading-8 text-lg">
-                Luckily, the piglet was inside the house. The wolf knocked and said, "Little pig, let me in." The pig
-                saw the wolf's big paws through the keyhole, so he answered, "No! Not by the hairs of my chinny chin
-                chin!"
+                Luckily, the little pig was inside the house. The wolf knocked and said, <em>"Little pig, let me
+                    in."</em>
+                The
+                pig
+                saw the wolf's big paws through the keyhole, so he answered, <em>"No! Not by the hairs of my chinny chin
+                    chin!"</em>
             </p>
             <img src="assets/wolf-denied-entry.jpg" class="mx-auto" data-aos="flip-right">
             <br>
             <br>
             <p class="leading-8 text-lg">
-                The wolf, a bit annoyed, said, "Then I'll huff and I'll puff and I'll blow your house down." So the wolf
+                The wolf, a bit annoyed, said, <em>"Then I'll huff and I'll puff and I'll blow your house down."</em> So
+                the wolf
                 successfully blew the straw house down.
             </p>
             <img src="assets/wolf-huff.jpg" class="mx-auto" data-aos="flip-right">
             <br>
             <br>
             <p class="leading-8 text-lg">
-                However, before he could enjoy his supper, the piglet swiftly ran away and hid with the second piglet.
+                However, before he could enjoy his supper, the little pig swiftly ran away and hid with the second
+                little pig.
             </p>
             <img src="assets/straw-pig-run.jpg" class="mx-auto" data-aos="flip-right">
+            <div class="flex justify-end pt-20">
+                <a href="introduction.html"
+                    class="flex items-center straw-font justify-center piggy-font px-4 h-10 text-md font-medium text-white bg-pink-500 rounded-s-3xl hover:bg-pink-600">
+                    <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                        fill="none" viewBox="0 0 14 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M13 5H1m0 0 4 4M1 5l4-4" />
+                    </svg>
+                    Previous Page
+                </a>
+                <a href="pig2.html"
+                    class="flex items-center justify-center piggy-font px-3 h-10 straw-font text-md font-medium text-white bg-pink-400 rounded-e-3xl hover:bg-pink-500">
+                    Next Page
+                    <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                        fill="none" viewBox="0 0 14 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M1 5h12m0 0L9 1m4 4L9 9" />
+                    </svg>
+                </a>
+            </div>
         </div>
     </div>
-
+    <footer class="bg-pink-50 py-4">
+        <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+            <span class="text-sm text-gray-500 sm:text-center">© BSCS 2-A <a href="https://flowbite.com/"
+                    class="hover:underline">CCS06</a>. Applications Development and Emerging Technologies.
+            </span>
+            <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 sm:mt-0">
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Cruz, Jansen</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Alfonso, Aljunalei</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Arcega, Lance</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline">David, Ivan</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline">Salem, Jamaica</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="text/javascript" src="vanilla-tilt.js"></script>
