--- a/pig3.html
+++ b/pig3.html
@@ -2,96 +2,135 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Three Little Pigs - </title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Three Little Pigs - Page 4 - The Bricks</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 
 <body>
-    <nav class="bg-orange-50 shadow-lg fixed w-full z-20 top-0 start-0 border-b border-gray-200">
+    <nav class="bg-pink-50 shadow-lg fixed w-full z-20 top-0 start-0 border-b border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo">
-                <span class="self-center text-2xl font-bold whitespace-nowrap text-rose-500">The Three Little
+            <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <img src="assets/3pigs.svg" class="h-8" alt="Flowbite Logo" />
+                <span class="self-center text-2xl font-bold whitespace-nowrap text-pink-500 piggy-font">The Three Little
                     Pigs</span>
             </a>
-            <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-                <button data-collapse-toggle="navbar-sticky" type="button"
-                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
-                    aria-controls="navbar-sticky" aria-expanded="false">
-                    <span class="sr-only">Open main menu</span>
-                    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-                        viewBox="0 0 17 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M1 1h15M1 7h15M1 13h15" />
-                    </svg>
-                </button>
-            </div>
-            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-                <ul
-                    class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
-                    <li>
-                        <a href="index.html"
-                            class="block py-2 px-3 text-white bg-rose-500 rounded md:bg-orange-50 md:text-rose-500 md:p-0 "
-                            aria-current="page">Home</a>
-                    </li>
-                    <li>
-                        <a href="introduction.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Introduction</a>
-                    </li>
-                    <li>
-                        <a href="pig1.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Pig
-                            1
-                        </a>
-                    </li>
-                    <li>
-                        <a href="pig2.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:bg-orange-50 md:hover:text-rose-500 md:p-0">Pig
-                            2
-                        </a>
-                    </li>
-                    <li>
-                        <a href="pig3.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:hover:text-rose-500 md:p-0">Pig
-                            3
-                        </a>
-                    </li>
-                    <li>
-                        <a href="conclusion.html"
-                            class="block py-2 px-3 text-gray-900 rounded md:hover:bg-transparent md:hover:text-rose-500 md:p-0">Conclusion
-                        </a>
-                    </li>
-                </ul>
-            </div>
         </div>
     </nav>
 
-    <section class="container mx-auto py-16">
-        <h2 class="text-3xl font-semibold mb-8 text-center">The Third Little Pig</h2>
-        <p class="text-xl text-gray-700 leading-8 mb-8">The third little pig worked hard all day and built his house
-            with
-            bricks. It was a sturdy house complete with a fine fireplace and chimney. It looked like it could withstand
-            the
-            strongest winds.</p>
-
-
-        <p class="text-xl text-gray-700 leading-8 mb-8">The wolf chased them down the lane and he almost caught them.
-            But
-            they made it to the brick house and slammed the door closed before the wolf could catch them. The three
-            little
-            pigs they were very frightened, they knew the wolf wanted to eat them. And that was very, very true. The
-            wolf
-            hadn't eaten all day and he had worked up a large appetite chasing the pigs around and now he could smell
-            all
-            three of them inside and he knew that the three little pigs would make a lovely feast.</p>
-
-
-    </section>
+    <div class="flex justify-center min-h-screen py-20">
+        <div class="lg:w-1/2 md:4/5 p-8">
+            <h1 class="text-3xl text-center" style="font-family: Bricks;">The Bricks</h1>
+            <br>
+            <p class="leading-8 text-lg">
+                The third little pig worked hard all day and built his house with <span style="font-family:Bricks">
+                    bricks</span>. It was a sturdy house complete with a fine fireplace and chimney. It looked like it
+                could withstand the strongest winds.
+            </p>
+            <img src="assets/pig3-intro.png" class="py-8" data-aos="flip-right">
+            <br>
+            <br>
+            <p class="leading-8 text-lg">
+                The wolf chased them down the lane and he almost caught them. But they made it to the <span
+                    style="font-family:Bricks">
+                    bricks</span> house and
+                slammed the door closed before the wolf could catch them. The three little pigs they were very
+                frightened, they knew the wolf wanted to eat them. And that was very, very true. The wolf hadn't eaten
+                all day and he had worked up a large appetite chasing the pigs around and now he could smell all three
+                of them inside and he knew that the three little pigs would make a lovely feast.
+            </p>
+            <img src="assets/pig3-chase.webp" class="py-8" data-aos="flip-right">
+            <br>
+            <p class="leading-8 text-lg">
+                So the wolf knocked on the door and said:
+            </p>
+            <br>
+            <blockquote>
+                <p>"Little pigs! Little pigs!
+                    <br>
+                    Let me in! Let me in!"
+                </p>
+            </blockquote>
+            <br>
+            <br>
+            <p class="leading-8 text-lg">
+                But the little pigs saw the wolf's narrow eyes through the keyhole, so they answered back:
+            </p>
+            <br>
+            <blockquote>
+                <p>"No! No! No!<br>
+                    Not by the hairs on our chinny chin chin!"</p>
+            </blockquote>
+            <br>
+            <br>
+            <p class="leading-8 text-lg">
+                So the wolf showed his teeth and said:
+            </p>
+            <br>
+            <blockquote>
+                <p>"Then I'll huff<br>
+                    and I'll puff<br>
+                    and I'll blow your house down."</p>
+            </blockquote>
+            <img src="assets/pig3-huff.png" class="mx-auto" data-aos="flip-right">
+            <br>
+            <br>
+            <p class="leading-8 text-lg">
+                Well! he huffed and he puffed. He puffed and he huffed. And he huffed, huffed, and he puffed, puffed;
+                but he could not blow the house down. At last, he was so out of breath that he couldn't huff and he
+                couldn't puff anymore. So he stopped to rest and thought a bit.
+            </p>
+            <br>
+            <div class="flex justify-end pt-10">
+                <a href="pig2.html"
+                    class="flex items-center piggy-font justify-center piggy-font px-4 h-10 text-md font-medium text-white bg-pink-500 rounded-s-3xl hover:bg-pink-600">
+                    <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                        fill="none" viewBox="0 0 14 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M13 5H1m0 0 4 4M1 5l4-4" />
+                    </svg>
+                    Previous Page
+                </a>
+                <a href="conclusion.html"
+                    class="flex items-center justify-center px-3 h-10 piggy-font text-md font-medium text-white bg-pink-400 rounded-e-3xl hover:bg-pink-500">
+                    Next Page
+                    <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                        fill="none" viewBox="0 0 14 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M1 5h12m0 0L9 1m4 4L9 9" />
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </div>
+    <footer class="bg-pink-50 py-4">
+        <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+            <span class="text-sm text-gray-500 sm:text-center">© BSCS 2-A <a href="https://flowbite.com/"
+                    class="hover:underline">CCS06</a>. Applications Development and Emerging Technologies.
+            </span>
+            <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 sm:mt-0">
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Cruz, Jansen</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Alfonso, Aljunalei</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Arcega, Lance</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline">David, Ivan</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline">Salem, Jamaica</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
